--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.container {
+	max-width: var(--container-mw);
+	width: 100%;
+	padding-left: var(--container-pl);
+	padding-right: var(--container-pr);
+	margin-left: var(--container-ml);
+	margin-right: var(--container-mr);
 }
