Se integra la sección buscador con tres campos, sin funcionamiento real

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,13 @@
 	margin-left: var(--container-ml);
 	margin-right: var(--container-mr);
 }
+
+.section {
+	padding-top: var(--section-pt);
+	padding-bottom: var(--section-pb);
+}
+
+.flex-row {
+	display: flex;
+	flex-wrap: nowrap;
+}
