--- a/src/components/headerNav/HeaderNav.module.css
+++ b/src/components/headerNav/HeaderNav.module.css
@@ -5,7 +5,7 @@
 	width: 100%;
 	top: 0;
 	background-color: rgba(200, 200, 200, 0.8);
-	height: 80px;
+	height: var(--header-height);
 }
 
 .headerNav {
