--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,18 @@
 	display: flex;
 	flex-wrap: nowrap;
 }
+
+.main-btn {
+	display: inline-block;
+	font-size: 1rem;
+	font-weight: 600;
+	padding: 0.4rem 3rem;
+	border-radius: 8px;
+	background-color: var(--main-color);
+	color: white;
+	transition: background-color 0.3s ease-in-out;
+
+	&:hover {
+		background-color: var(--main-color-darken);
+	}
+}
