--- a/src/components/headerNav/HeaderNav.module.css
+++ b/src/components/headerNav/HeaderNav.module.css
@@ -4,8 +4,9 @@
 	position: fixed;
 	width: 100%;
 	top: 0;
-	background-color: rgba(200, 200, 200, 0.8);
+	background-color: var(--white);
 	height: var(--header-height);
+	box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
 }
 
 .headerNav {
@@ -49,12 +50,14 @@
 	transition: opacity 0.3s ease, transform 0.3s ease;
 
 	@media screen and (min-width: 1024px) {
-		display: initial;
+		position: static;
+		width: 100%;
+		display: flex;
 		opacity: 1;
 		transform: translateX(0);
-		position: static;
 		background-color: transparent;
 		min-height: auto;
+		justify-content: flex-end;
 	}
 }
 
@@ -64,14 +67,30 @@
 	z-index: 1;
 }
 
+.navigationMenu__container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 2rem;
+
+	@media screen and (min-width: 1024px) {
+		width: 100%;
+		justify-content: space-between;
+		flex-direction: row;
+		align-items: center;
+	}
+}
+
 .navigationMenu__list {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+	flex: 1;
 	gap: 1rem;
 
 	@media screen and (min-width: 1024px) {
 		text-align: initial;
+		justify-content: space-evenly;
 	}
 
 	& li {
@@ -79,23 +98,27 @@
 		text-transform: uppercase;
 
 		& a {
-			display: inline-block;
-			background-color: gray;
-			color: #000;
-			padding: 0.6rem 1.6rem;
+			color: var(--black);
+			font-weight: 600;
 			border-radius: 0.4rem;
 			text-decoration: none;
-			transform: scale(1);
+			text-transform: capitalize;
+			transition: color 0.3s ease-in-out;
 
 			@media screen and (min-width: 1024px) {
-				transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out,
-					transform 0.3s ease-in-out;
 				&:hover {
-					background-color: #000;
-					color: #fff;
-					transform: scale(1.05);
+					color: var(--main-color);
 				}
 			}
 		}
+	}
+}
+
+.navigationMenu__cta {
+	display: flex;
+	gap: 1rem;
+
+	@media screen and (min-width: 1024px) {
+		gap: 2rem;
 	}
 }
