--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
 	border-radius: 8px;
 	background-color: var(--main-color);
 	color: white;
+	text-align: center;
 	transition: background-color 0.3s ease-in-out;
 
 	&:hover {
