--- a/src/components/headerNav/HeaderNav.module.css
+++ b/src/components/headerNav/HeaderNav.module.css
@@ -18,10 +18,13 @@
 
 /* ########## NavigationLogo ########## */
 
-/* ########## NavigationMobile ########## */
-.navigationMobileIcon {
+/* ########## NavigationToggleIcon ########## */
+.navigationToggleIcon {
 	display: block;
 	cursor: pointer;
+	width: 2rem;
+	height: auto;
+	stroke: var(--main-color);
 	transition: transform 0.3s ease, opacity 0.3s ease;
 
 	@media screen and (min-width: 1024px) {
@@ -29,49 +32,52 @@
 	}
 }
 
-.navigationMobileIconOpen {
+.navigationToggleIconOpen {
 	transform: rotate(90deg);
 }
 
 /* ########## NavigationMenu ########## */
 .navigationMenu {
 	position: absolute;
-	display: none;
 	opacity: 0;
 	top: 100%;
 	left: 0;
 	right: 0;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
-	align-items: center;
-	background: rgba(250, 250, 250, 0.6);
-	transform: translateX(100%);
+	align-items: flex-start;
+	gap: var(--menu-gap);
+	background: var(--blue-extra-light);
+	transform: translateX(-100%);
 	padding: 2rem 0;
-	transition: opacity 0.3s ease, transform 0.3s ease;
+	padding-left: var(--container-pl);
+	padding-right: var(--container-pr);
+	transition: opacity 0.4s ease, transform 0.3s ease;
 
 	@media screen and (min-width: 1024px) {
 		position: static;
 		width: 100%;
-		display: flex;
 		opacity: 1;
 		transform: translateX(0);
 		background-color: transparent;
-		min-height: auto;
-		justify-content: flex-end;
+		height: inherit;
+		flex-direction: row;
+		align-items: center;
 	}
 }
 
 .navigationMenuMobileOpen {
 	opacity: 1;
-	transform: translateX(0);
 	z-index: 1;
+	transform: translateX(0);
 }
 
 .navigationMenu__container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 2rem;
+	gap: var(--menu-gap);
 
 	@media screen and (min-width: 1024px) {
 		width: 100%;
@@ -83,13 +89,12 @@
 
 .navigationMenu__list {
 	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
+	flex-direction: column;
 	flex: 1;
-	gap: 1rem;
+	gap: var(--menu-gap);
 
 	@media screen and (min-width: 1024px) {
-		text-align: initial;
+		flex-direction: row;
 		justify-content: space-evenly;
 	}
 
@@ -116,9 +121,10 @@
 
 .navigationMenu__cta {
 	display: flex;
-	gap: 1rem;
+	flex-direction: column;
+	gap: var(--menu-gap);
 
 	@media screen and (min-width: 1024px) {
-		gap: 2rem;
+		flex-direction: row;
 	}
 }
