--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ a {
 body {
 	display: flex;
 	flex-direction: column;
-	background-color: white;
+	background-color: var(--white);
 	width: 100%;
 	min-height: 100vh;
 	height: 100%;
