--- a/src/components/search/Search.module.css
+++ b/src/components/search/Search.module.css
@@ -15,41 +15,70 @@
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
-	gap: 1.2rem;
+	gap: 1.75rem;
 
-	@media screen and (min-width: 768px) {
-		flex-direction: row;
+	@media screen and (min-width: 1024px) {
 		align-items: center;
+		flex-direction: row;
+		gap: 0;
 	}
 }
 
 .searchFormGroup {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	width: 100%;
+
+	@media screen and (min-width: 1024px) {
+		flex-direction: row;
+		gap: 2rem;
+		width: 100%;
+		margin-bottom: 1.75rem;
+	}
+}
+
+.searchFormGroupSelect {
+	position: relative;
 	display: flex;
 	flex-direction: row;
 	gap: 0.6rem;
 	width: 100%;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 1024px) {
 		flex-direction: column;
 		flex-grow: 1;
 		gap: 0.2rem;
 		width: auto;
 	}
+}
 
-	& select {
-		padding: 0.8rem 1rem;
-		border: 1px solid rgb(70, 78, 78);
-		background-color: rgb(200, 200, 200);
-		color: rgb(40, 40, 40);
-		font-size: 1rem;
-		font-weight: 500;
-		width: inherit;
-		cursor: pointer;
-		transition: border-color 0.3s;
+.searchFormSelect {
+	position: relative;
+	padding: 1rem;
+	padding-left: 2rem;
+	border: none;
+	background-color: var(--blue-extra-light);
+	color: rgb(110, 110, 110);
+	border-radius: 5px;
+	font-size: 1rem;
+	font-weight: 500;
+	width: inherit;
+	cursor: pointer;
+	transition: border-color 0.3s;
 
-		&:focus {
-			outline: none;
-			border-color: rgb(89, 121, 122);
-		}
+	&:focus {
+		outline: none;
+		border: none;
 	}
+}
+
+.searchFormSelectIcon {
+	position: absolute;
+	top: 50%;
+	left: 0.4rem;
+	transform: translateY(-50%);
+	width: 1.5rem;
+	z-index: 1;
 }
