--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,13 @@
 	color: var(--black);
 }
 
+.sectionTitle {
+	font-size: clamp(1.5rem, 5vw, 2rem);
+	font-weight: 600;
+	text-align: initial;
+	padding-bottom: 1rem;
+}
+
 .flex-row {
 	display: flex;
 	flex-wrap: nowrap;
