Integarción de la vista de detalle de autos, ruta: /car-details

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 	--main-color: #2d74ba;
 	--main-color-darken: hsl(210, 61%, 36%);
 	--blue-extra-light: #ecf3f9;
+	--mid-grey: #5f6569;
 
 	--rgb-main-color: 45, 116, 186;
 	--rgb-blue-extra-light: 236, 243, 249;
