Integración parcial de vista para detalle de auto por ID

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
 
 	--rgb-main-color: 45, 116, 186;
 	--rgb-blue-extra-light: 236, 243, 249;
+	--rgb-white: 255, 255, 255;
 
 	--container-mw: 1280px;
 	--container-pl: 1rem;
