Actualización de cards para la presentación de detalle de auto

--- a/src/components/suggestions/card/CardSuggestion.module.css
+++ b/src/components/suggestions/card/CardSuggestion.module.css
@@ -44,38 +44,17 @@
 .cardDataScores {
 	display: flex;
 	gap: 0.4rem;
+
+	& svg {
+		width: 1.4rem;
+		margin-right: 0.6rem;
+	}
 }
 
 .cardIcon {
 	width: 1.8rem;
 	height: auto;
 	margin-right: 0.5rem;
-}
-
-.cardFavoriteBtn {
-	display: inline-flex;
-	padding: 0.3rem 1.8rem;
-	border-radius: 8px;
-	color: var(--main-color);
-	background-color: var(--white);
-	text-align: center;
-	border: 2px solid var(--main-color);
-	transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
-
-	& svg {
-		width: 1.2rem;
-		height: auto;
-	}
-
-	&:hover {
-		background-color: var(--main-color);
-		color: var(--white);
-	}
-}
-
-.cardIsFavorite {
-	background-color: var(--main-color);
-	color: var(--white);
 }
 
 .cardInfoRental {
