--- a/src/pages/CarDetail.module.css
+++ b/src/pages/CarDetail.module.css
@@ -1,20 +1,28 @@
 .carDetail {
 	display: flex;
+	flex-direction: column;
 	gap: 2rem;
-	padding: 2rem;
+
+	@media screen and (min-width: 1024px) {
+		flex-direction: row;
+	}
 }
 
 .carDetailGallery {
-	flex: 1;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
+	width: 100%;
+
+	@media screen and (min-width: 1024px) {
+		width: 50%;
+	}
 }
 
 .mainImageContainer {
 	position: relative;
 	width: 100%;
-	height: 400px;
+	height: auto;
 	overflow: hidden;
 	border-radius: 8px;
 	display: flex;
@@ -59,11 +67,12 @@
 
 .thumbnails {
 	display: flex;
-	justify-content: center;
-	gap: 1rem;
+	justify-content: space-evenly;
+	width: 100%;
 
 	& img {
-		width: 100%;
+		object-fit: contain;
+		width: 33.33333333%;
 	}
 }
 
@@ -81,8 +90,69 @@
 }
 
 .carDetailInfo {
-	flex: 1;
-	padding: 1rem;
-	background-color: #f9f9f9;
-	border-radius: 8px;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	width: 100%;
+
+	@media screen and (min-width: 768px) {
+		flex-direction: row;
+	}
+
+	@media screen and (min-width: 1024px) {
+		width: 50%;
+		flex-direction: column;
+	}
+}
+
+.carDetailData,
+.carDetailSpecs {
+	width: 100%;
+	background-color: var(--blue-extra-light);
+	padding: 1.25rem 1.75rem;
+	border-radius: 0.3125rem;
+	color: var(--black);
+}
+
+.carDetailData {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+	gap: 1rem;
+}
+
+.carDetailData {
+	& h3 {
+		font-size: 1.5rem;
+	}
+}
+
+.carDetailDataButtons {
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	gap: 1rem;
+}
+
+.carDetailSpecs {
+	& h4 {
+		width: 100%;
+		border-bottom: 1px solid var(--main-color);
+		padding-bottom: 0.6rem;
+		margin-bottom: 1rem;
+	}
+}
+
+.carDetailSpecsData {
+	display: flex;
+	flex-wrap: nowrap;
+	align-items: center;
+	gap: 1rem;
+	padding: 0.4rem 0;
+
+	& svg {
+		width: 1.6rem;
+	}
 }
