--- a/src/pages/CarDetails.module.css
+++ b/src/pages/CarDetails.module.css
@@ -21,8 +21,12 @@
 	display: flex;
 	align-items: stretch;
 	justify-content: center;
-	flex-wrap: nowrap;
+	flex-wrap: wrap;
 	gap: 1rem;
+
+	@media screen and (min-width: 1024px) {
+		flex-wrap: nowrap;
+	}
 }
 
 .carDetailsSearch {
@@ -34,6 +38,10 @@
 	flex-direction: column;
 
 	@media screen and (min-width: 768px) {
+		width: 100%;
+	}
+
+	@media screen and (min-width: 1024px) {
 		width: 25%;
 	}
 }
@@ -55,7 +63,11 @@
 	width: 100%;
 
 	&:nth-child(3) {
-		margin-bottom: 3.6rem;
+		margin-bottom: 0;
+
+		@media screen and (min-width: 1024px) {
+			margin-bottom: 2.6rem;
+		}
 	}
 
 	& svg {
@@ -85,12 +97,13 @@
 	border-radius: 0.5rem;
 
 	@media screen and (min-width: 768px) {
-		width: 75%;
+		width: 100%;
 		grid-template-columns: repeat(2, 1fr);
 	}
 
 	@media screen and (min-width: 1024px) {
 		grid-template-columns: repeat(3, 1fr);
+		width: 75%;
 	}
 }
 
