Se mejora la renderización y estilos del detalle de todos los autos

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 	--main-color-darken: hsl(210, 61%, 36%);
 	--blue-extra-light: #ecf3f9;
 	--mid-grey: #5f6569;
+	--warning: #ba2d74;
 
 	--rgb-main-color: 45, 116, 186;
 	--rgb-blue-extra-light: 236, 243, 249;
