--- a/src/pages/Dashboard.module.css
+++ b/src/pages/Dashboard.module.css
@@ -5,11 +5,19 @@
     align-content: center;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
 .content{ 
     width: 70%;
     margin: auto;
     padding: 2rem;
     height: 37.5rem;
+    flex: 1;
 }
 
 .searchByBrand {
@@ -71,6 +79,8 @@
 
 .carList {
     margin-top: 2rem;
+    min-height: 70vh; /* Asegura que haya suficiente espacio antes del footer */
+    
 }
 
 .tableInfo {
