--- a/src/pages/CarDetail.module.css
+++ b/src/pages/CarDetail.module.css
@@ -1,4 +1,4 @@
-.carDetail {
+.carDetail_container {
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
@@ -8,7 +8,8 @@
 	}
 }
 
-.carDetailGallery {
+/* ########## Gallery ########## */
+.carGallery {
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
@@ -19,29 +20,26 @@
 	}
 }
 
-.mainImageContainer {
+.carGallery_mainImageContainer {
 	position: relative;
 	width: 100%;
 	height: auto;
-	overflow: hidden;
-	border-radius: 8px;
 	display: flex;
 	align-items: center;
 }
 
-.mainImage {
+.carGallery_mainImage {
 	width: 100%;
+	height: 20rem;
 	object-fit: cover;
 }
 
-.navButtonLeft,
-.navButtonRight {
+.carGallery_navButtonLeft,
+.carGallery_navButtonRight {
 	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	background-color: rgba(var(--rgb-white), 0.6);
+	background-color: rgba(var(--rgb-white), 0.5);
 	color: white;
-	border: 1px solid var(--main-color);
+	border: 2px solid var(--main-color);
 	border-radius: 0.4rem;
 	width: 2.5rem;
 	height: 2.5rem;
@@ -57,15 +55,15 @@
 	}
 }
 
-.navButtonLeft {
-	left: 0.5rem;
+.carGallery_navButtonLeft {
+	left: 0;
 }
 
-.navButtonRight {
-	right: 0.5rem;
+.carGallery_navButtonRight {
+	right: 0;
 }
 
-.thumbnails {
+.carGallery_thumbnails {
 	display: flex;
 	justify-content: space-evenly;
 	width: 100%;
@@ -76,20 +74,20 @@
 	}
 }
 
-.thumbnail {
-	width: 8rem;
-	height: 6rem;
-	object-fit: cover;
+.carGallery_thumbnail {
 	border-radius: 8px;
 	cursor: pointer;
-	transition: border 0.3s ease;
+	border: 2px solid transparent;
+	transition: border 0.3s ease-in-out;
 }
 
-.thumbnail.active {
-	border: 2px solid #007bff;
+.carGallery_thumbnail.active {
+	border: 2px solid var(--main-color);
 }
+/* ########## End Gallery ########## */
 
-.carDetailInfo {
+/* ########## Car Info ########## */
+.carInfo {
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -106,37 +104,40 @@
 	}
 }
 
-.carDetailData,
-.carDetailSpecs {
+.carInfo_cardContainer {
 	width: 100%;
 	background-color: var(--blue-extra-light);
-	padding: 1.25rem 1.75rem;
 	border-radius: 0.3125rem;
 	color: var(--black);
 }
 
 .carDetailData {
+	position: relative;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
 	gap: 1rem;
-}
 
-.carDetailData {
 	& h3 {
 		font-size: 1.5rem;
 	}
 }
 
+.carDetailData.favoriteButton {
+	position: absolute;
+	top: 0.8rem;
+	right: 0.8rem;
+}
+
 .carDetailDataButtons {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
 	gap: 1rem;
 }
-
-.carDetailSpecs {
+Container .carDetailSpecs {
 	& h4 {
 		width: 100%;
 		border-bottom: 1px solid var(--main-color);
@@ -156,3 +157,4 @@
 		width: 1.6rem;
 	}
 }
+/* ########## End Car Info ########## */
