--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 	color-scheme: light dark;
 	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	background-color: var(--white);
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -47,7 +47,7 @@
 
 a {
 	font-weight: 500;
-	color: #646cff;
+	color: var(--black);
 	text-decoration: inherit;
 }
 
@@ -58,7 +58,6 @@ body {
 	width: 100%;
 	min-height: 100vh;
 	height: 100%;
-	padding-top: var(--header-height);
 }
 
 h1 {
