--- a/src/components/carDetails/CarDetailsSearch.module.css
+++ b/src/components/carDetails/CarDetailsSearch.module.css
@@ -3,7 +3,11 @@
 	flex-direction: column;
 	align-items: center;
 	padding: 1.6rem;
-	row-gap: 1.8rem;
+	gap: 1rem;
+
+	@media screen and (min-width: 1024px) {
+		gap: 1.8rem;
+	}
 }
 
 .carDetailsSelectContainer {
