--- a/src/pages/CarDetail.module.css
+++ b/src/pages/CarDetail.module.css
@@ -30,8 +30,12 @@
 
 .carGallery_mainImage {
 	width: 100%;
-	height: 20rem;
-	object-fit: cover;
+	height: 14rem;
+	object-fit: contain;
+
+	@media screen and (min-width: 480px) {
+		height: 24rem;
+	}
 }
 
 .carGallery_navButtonLeft,
@@ -95,11 +99,28 @@
 	width: 100%;
 
 	@media screen and (min-width: 768px) {
-		flex-direction: row;
+		flex-direction: column;
+		flex-wrap: wrap;
 	}
 
 	@media screen and (min-width: 1024px) {
 		width: 50%;
+		flex-direction: column;
+		justify-content: start;
+	}
+}
+
+.carInfo_cards {
+	flex-direction: column;
+	display: flex;
+	flex-wrap: nowrap;
+	gap: 1rem;
+
+	@media screen and (min-width: 765px) {
+		flex-direction: row;
+	}
+
+	@media screen and (min-width: 1024px) {
 		flex-direction: column;
 	}
 }
