--- a/src/components/headerNav/HeaderNav.module.css
+++ b/src/components/headerNav/HeaderNav.module.css
@@ -103,6 +103,7 @@
 	gap: var(--menu-gap);
 
 	@media screen and (min-width: 1024px) {
+		height: 100%;
 		flex: 1;
 		flex-direction: row;
 		justify-content: space-evenly;
@@ -111,21 +112,56 @@
 	& li {
 		font-weight: bold;
 		text-transform: uppercase;
+		height: inherit;
 
 		& a {
-			color: var(--black);
+			position: relative;
 			font-weight: 600;
 			border-radius: 0.4rem;
 			text-decoration: none;
 			text-transform: capitalize;
+			height: inherit;
+			display: flex;
+			align-items: center;
 			transition: color 0.3s ease-in-out;
 
 			@media screen and (min-width: 1024px) {
+				&::after {
+					content: "";
+					position: absolute;
+					bottom: 0;
+					width: 100%;
+					height: 0.2rem;
+					background-color: var(--main-color);
+					border-radius: 0.2rem;
+					transform: scaleX(0);
+					transition: transform 0.3s ease-in-out;
+				}
+
 				&:hover {
 					color: var(--main-color);
 				}
+
+				&:hover::after {
+					transform: scaleX(1);
+				}
 			}
 		}
+	}
+}
+
+.activeLink {
+	color: var(--main-color);
+
+	&::before {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		height: 0.2rem;
+		background-color: var(--main-color);
+		border-radius: 0.2rem;
+		transition: transform 0.3s ease-in-out;
 	}
 }
 
