--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -1,67 +1,46 @@
-.form {
-	display: flex;
-	flex-direction: column;
-	gap: 12px;
-	width: 300px;
-	margin: auto;
-	padding: 20px;
-	border-radius: 8px;
-	background: #ffffff; /* Fondo blanco */
-	box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.title {
-	text-align: center;
-	color: #002366; /* Azul oscuro */
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  width: 100%;
+  margin: auto;
 }
 
 .label {
-	display: flex;
-	flex-direction: column;
-	font-weight: bold;
-	color: #002366; /* Azul oscuro */
+  display: flex;
+  flex-direction: column;
+  font-weight: bold;
+  color: #002366;
 }
 
 .input {
-	padding: 8px;
-	border: 1px solid #002366; /* Azul oscuro */
-	border-radius: 4px;
-	background: #002366; /* Fondo azul oscuro */
-	color: white; /* Texto blanco */
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  background: white;
+  color: black;
 }
 
 .input::placeholder {
-	color: #d0d0d0; /* Color gris claro para los placeholders */
+  color: #d0d0d0;
 }
 
 .passwordContainer {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .toggleButton {
-	margin-left: 10px;
-	padding: 5px;
-	font-size: 12px;
-	background: none;
-	border: none;
-	color: #002366; /* Azul oscuro */
-	cursor: pointer;
+  margin-left: 10px;
+  padding: 5px;
+  font-size: 12px;
+  background: none;
+  border: none;
+  color: #002366;
+  cursor: pointer;
 }
 
 .toggleButton:hover {
-	text-decoration: underline;
-}
-
-.submitButton {
-	padding: 10px;
-	background-color: #002366; /* Azul oscuro */
-	color: white; /* Texto blanco */
-	border: none;
-	border-radius: 4px;
-	cursor: pointer;
-}
-
-.submitButton:hover {
-	background-color: #001a4d; /* Azul más oscuro al pasar el mouse */
+  text-decoration: underline;
 }
