--- a/src/pages/RegisterPage.module.css
+++ b/src/pages/RegisterPage.module.css
@@ -1,7 +1,73 @@
-.container {
+.carDetails {
+  width: 100%;
+  min-height: 60vh;
+  height: 100%;
+  padding-bottom: 4rem;
+}
+
+.carDetails h2 {
+  font-size: 2rem;
+  width: 100%;
+  background-color: var(--main-color);
+  padding: 2rem 0;
+  text-align: center;
+  margin-bottom: 1.4rem;
+  margin-top: 5rem;
+}
+
+.buttonContainer {
+  width: 100%;
   display: flex;
   justify-content: center;
+  margin-top: 1.5rem;
+}
+
+.submitButton {
+  background-color: var(--main-color);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.submitButton:hover {
+  background-color: #001a4d;
+}
+
+.carDetailsContainer {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  height: 100vh;
-  background-color: #e3e3e3;
+  gap: 1rem;
+}
+
+.carDetailsContainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 1rem;
+
+  @media screen and (min-width: 1024px) {
+    flex-wrap: nowrap;
+  }
+}
+
+.carDetailsSearch {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; 
+  padding: 1.8rem;
+  position: relative;
+  background-color: var(--blue-extra-light);
+  width: 100%;
+  border-radius: 0.5rem;
+
+  @media screen and (min-width: 712px) {
+    width: 70%;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 60%;
+  }
 }
