--- a/src/pages/CarDetail.module.css
+++ b/src/pages/CarDetail.module.css
@@ -1,3 +1,16 @@
+.carDetail {
+	width: 100%;
+	min-height: 100vh;
+
+	& h2 {
+		padding: 2rem 0;
+		text-align: center;
+		width: inherit;
+		background-color: var(--main-color);
+		color: var(--white);
+		margin-bottom: 1rem;
+	}
+}
 .carDetail_container {
 	display: flex;
 	flex-direction: column;
