--- a/src/pages/CarDetails.module.css
+++ b/src/pages/CarDetails.module.css
@@ -8,6 +8,7 @@
 		font-size: 2rem;
 		width: inherit;
 		background-color: var(--main-color);
+		color: var(--white);
 		padding: 2rem 0;
 		text-align: center;
 		margin-bottom: 1.4rem;
