--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -1,48 +1,75 @@
 .loginContainer {
-    display: flex;
-    min-height: 100vh;
-    align-items: center;
-    justify-content: center;
-    background-color: #f3f4f6;
-}
-
-.loginBox {
-    background: white;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 350px;
+    width: 100%;
+    min-height: 60vh;
+    height: 100%;
+    padding-bottom: 2rem;
+  }
+  
+  .loginContainer h2 {
+    font-size: 2rem;
+    width: 100%;
+    background-color: var(--main-color);
+    padding: 2rem 0;
     text-align: center;
-}
-
-.loginBox h2 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-}
-
-.errorMessage {
-    color: red;
-    margin-bottom: 1rem;
-}
-
-.inputField {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.submitButton {
-    width: 100%;
-    background-color: #3b82f6;
+    margin-bottom: 1.4rem;
+    margin-top: 5rem;
     color: white;
-    padding: 10px;
+  }
+  
+  .buttonContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5rem;
+  }
+  
+  .submitButton {
+    background-color: var(--main-color);
+    color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
     cursor: pointer;
-}
-
-.submitButton:hover {
-    background-color: #2563eb;
-}
+  }
+  
+  .submitButton:hover {
+    background-color: #001a4d;
+  }
+  
+  .loginBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  .loginBox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap: 1rem;
+  
+    @media screen and (min-width: 1024px) {
+      flex-wrap: nowrap;
+    }
+  }
+  
+  .loginFormContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 1.8rem;
+    position: relative;
+    background-color: var(--blue-extra-light);
+    width: 90%;
+    border-radius: 0.5rem;
+  
+    @media screen and (min-width: 712px) {
+      width: 70%;
+    }
+  
+    @media screen and (min-width: 1024px) {
+      width: 60%;
+    }
+  }
+  
