--- a/src/pages/RegisterPage.module.css
+++ b/src/pages/RegisterPage.module.css
@@ -1,11 +1,11 @@
-.carDetails {
+.register {
   width: 100%;
   min-height: 60vh;
   height: 100%;
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
 }
 
-.carDetails h2 {
+.register h2 {
   font-size: 2rem;
   width: 100%;
   background-color: var(--main-color);
@@ -13,6 +13,7 @@
   text-align: center;
   margin-bottom: 1.4rem;
   margin-top: 5rem;
+  color: white ;
 }
 
 .buttonContainer {
@@ -34,14 +35,14 @@
   background-color: #001a4d;
 }
 
-.carDetailsContainer {
+.registerContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
 }
 
-.carDetailsContainer {
+.registerContainer {
   position: relative;
   width: 100%;
   height: 100%;
@@ -53,14 +54,14 @@
   }
 }
 
-.carDetailsSearch {
+.registerFormContainer {
   display: flex;
   flex-direction: column;
-  align-items: flex-start; 
+  align-items: stretch; 
   padding: 1.8rem;
   position: relative;
   background-color: var(--blue-extra-light);
-  width: 100%;
+  width: 90%;
   border-radius: 0.5rem;
 
   @media screen and (min-width: 712px) {
