--- a/src/components/UserForm/UserForm.module.css
+++ b/src/components/UserForm/UserForm.module.css
@@ -1,13 +1,12 @@
 .container {
     display: flex;
     flex-direction: column;
-    gap: 1rem; /* Espacio entre los campos */
+    gap: 1rem;
 }
 
 .inputGroup {
     display: flex;
     align-items: center;
-    border: 1px solid white; /* Borde blanco */
     border-radius: 5px;
     padding: 0.5rem;
     background: white;
@@ -26,17 +25,17 @@
     border: none;
     outline: none;
     flex: 1;
-    padding: 0.5rem 0.5rem 0.5rem 35px; /* Espacio para el icono */
+    padding: 0.5rem 0.5rem 0.5rem 35px;
     font-size: 1rem;
     background: none;
-    color: black; /* Letra negra */
+    color: black;
 }
 
 label {
-    font-weight: bold; /* Negrita */
-    color: black; /* Letra negra */
-    display: block; /* Para separarlo del input */
-    margin-bottom: 5px; /* Espacio entre el label y el input */
+    font-weight: bold;
+    color: black;
+    display: block;
+    margin-bottom: 5px;
 }
 
 .showButton {
@@ -47,5 +46,16 @@ label {
     right: 10px;
     font-size: 18px;
     color: #3b82f6;
-	
+
+}
+
+.error {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+    font-weight: bold;
+}
+
+.errorBorder {
+    border: 2px solid red;
 }
