--- a/src/pages/Dashboard.module.css
+++ b/src/pages/Dashboard.module.css
@@ -143,3 +143,86 @@ html, body {
 }
 
 
+.carImage {
+    width: 80px;
+    height: auto;
+    border-radius: 5px;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pageButton {
+    padding: 8px 15px;
+    margin: 0 5px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.pageButton:disabled {
+    background-color: gray;
+    cursor: not-allowed;
+}
+
+/*niuevo*/
+
+.register {
+    width: 100%;
+    min-height: 60vh;
+    height: 100%;
+    padding-bottom: 2rem;
+}
+
+.register h2 {
+    font-size: 2rem;
+    width: 100%;
+    background-color: var(--main-color);
+    padding: 2rem 0;
+    text-align: center;
+    margin-bottom: 1.4rem;
+    margin-top: 5rem;
+    color: white;
+}
+
+.buttonContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5rem;
+}
+
+.submitButton {
+    background-color: var(--main-color);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.submitButton:hover {
+    background-color: #001a4d;
+}
+
+.modalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modalContent {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
