Se integra formulario de búsqueda funcional al Home

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,1 +1,30 @@
+.homeSearch {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
 
+.homeSearch form {
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	gap: 1rem;
+	@media screen and (min-width: 768px) {
+	}
+}
+
+.homeSearch form div {
+	gap: 1rem;
+	flex-direction: column;
+	width: inherit;
+
+	@media screen and (min-width: 768px) {
+		flex-direction: row;
+	}
+}
+
+.homeSearch form button {
+	margin-top: 0;
+}
