--- a/src/components/carDetails/CarDetailsPagination.module.css
+++ b/src/components/carDetails/CarDetailsPagination.module.css
@@ -25,6 +25,7 @@
 		border: 1px solid var(--main-color);
 		font-weight: 600;
 		cursor: pointer;
+		margin-top: 0;
 		transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 
 		& svg {
@@ -36,4 +37,15 @@
 			color: var(--white);
 		}
 	}
+}
+
+.carDetailsPagination button:disabled {
+	cursor: not-allowed;
+	opacity: 0.5;
+	background-color: #a0a0a0;
+	border-color: #3f3f3f;
+}
+
+.carDetailsPagination button:disabled svg {
+	color: #3f3f3f;
 }
