--- a/src/pages/CarDetails.module.css
+++ b/src/pages/CarDetails.module.css
@@ -37,6 +37,7 @@
 	border-radius: 0.5rem;
 	display: flex;
 	flex-direction: column;
+	padding: 1.75rem;
 
 	@media screen and (min-width: 768px) {
 		width: 100%;
@@ -50,12 +51,27 @@
 .carDetailsSearch form {
 	flex-direction: column;
 	align-items: center;
-	padding: 1.75rem;
 	width: 100%;
 	gap: 1rem;
 
 	@media screen and (min-width: 768px) {
 	}
+}
+
+.carDetailsSearch h3 {
+	font-size: 1.5rem;
+	font-weight: 700;
+	margin-bottom: 0.4rem;
+}
+
+.carDetailsSearch p {
+	font-size: 0.9rem;
+	font-weight: 500;
+	margin-bottom: 1rem;
+	color: var(--main-color);
+}
+.carDetailsSearch p span {
+	font-weight: 700;
 }
 
 .carDetailsSearch form div {
