--- a/src/components/carCards/CarCard_V1V2V3.module.css
+++ b/src/components/carCards/CarCard_V1V2V3.module.css
@@ -5,18 +5,25 @@
 	overflow: hidden;
 	text-align: initial;
 	width: 100%;
-	height: auto;
+	height: 100%;
 }
 
 .card_isFavorite {
 	position: absolute;
 	top: 0.8rem;
 	right: 1.2rem;
+
+	& button {
+		margin-top: 0;
+	}
 }
 
 .cardContent {
-	padding: 0.8rem 1.2rem;
 	color: var(--black);
+	padding: 0.8rem 1.2rem;
+	height: inherit;
+	display: flex;
+	flex-direction: column;
 
 	& svg {
 		width: 1.4rem;
@@ -79,7 +86,7 @@
 
 .cardContent_detailsRental {
 	justify-content: space-between;
-	align-items: center;
+	align-self: flex-end;
 
 	& p {
 		font-size: 1.2rem;
@@ -87,14 +94,7 @@
 	}
 
 	& button {
-		padding: 0.4rem 0.7rem;
-		background-color: var(--main-color);
-		color: var(--white);
-		transition: background-color 0.3s ease-in-out;
-
-		&:hover {
-			background-color: var(--main-color-darken);
-		}
+		margin-top: 0;
 	}
 }
 
@@ -104,12 +104,16 @@
 	gap: 0.6rem;
 }
 
+.cardContent_detailsTitle,
 .cardContent_specsTitle {
 	font-size: 1.1rem;
 	font-weight: 400;
-	margin-bottom: 0.8rem;
-	padding-bottom: 0.6rem;
+	margin-bottom: 1.25rem;
+	padding-bottom: 0.4rem;
 	border-bottom: 1px solid var(--main-color);
+}
+.cardContent_detailsTitle {
+	width: calc(100% - 3.25rem);
 }
 
 .cardContent_specsList {
