--- a/src/pages/CarDetail.module.css
+++ b/src/pages/CarDetail.module.css
@@ -11,119 +11,8 @@
 		margin-bottom: 1rem;
 	}
 }
-.carDetail_container {
-	display: flex;
-	flex-direction: column;
-	gap: 2rem;
 
-	@media screen and (min-width: 1024px) {
-		flex-direction: row;
-	}
-}
-
-/* ########## Gallery ########## */
-.carGallery {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-	width: 100%;
-
-	@media screen and (min-width: 1024px) {
-		width: 50%;
-	}
-}
-
-.carGallery_mainImageContainer {
-	position: relative;
-	width: 100%;
-	height: auto;
-	display: flex;
-	align-items: center;
-}
-
-.carGallery_mainImage {
-	width: 100%;
-	height: 14rem;
-	object-fit: contain;
-
-	@media screen and (min-width: 480px) {
-		height: 24rem;
-	}
-}
-
-.carGallery_navButtonLeft,
-.carGallery_navButtonRight {
-	position: absolute;
-	background-color: rgba(var(--rgb-white), 0.5);
-	color: white;
-	border: 2px solid var(--main-color);
-	border-radius: 0.4rem;
-	width: 2.5rem;
-	height: 2.5rem;
-	cursor: pointer;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	color: var(--main-color);
-	transition: background-color 0.3s ease-in-out;
-
-	&:hover {
-		background-color: var(--blue-extra-light);
-	}
-}
-
-.carGallery_navButtonLeft {
-	left: 0;
-}
-
-.carGallery_navButtonRight {
-	right: 0;
-}
-
-.carGallery_thumbnails {
-	display: flex;
-	justify-content: space-evenly;
-	width: 100%;
-
-	& img {
-		object-fit: contain;
-		width: 33.33333333%;
-	}
-}
-
-.carGallery_thumbnail {
-	border-radius: 8px;
-	cursor: pointer;
-	border: 2px solid transparent;
-	transition: border 0.3s ease-in-out;
-}
-
-.carGallery_thumbnail.active {
-	border: 2px solid var(--main-color);
-}
-/* ########## End Gallery ########## */
-
-/* ########## Car Info ########## */
-.carInfo {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-	width: 100%;
-
-	@media screen and (min-width: 768px) {
-		flex-direction: column;
-		flex-wrap: wrap;
-	}
-
-	@media screen and (min-width: 1024px) {
-		width: 50%;
-		flex-direction: column;
-		justify-content: start;
-	}
-}
-
-.carInfo_header {
+.carDetail_header {
 	position: sticky;
 	top: var(--header-height);
 	display: flex;
@@ -131,14 +20,12 @@
 	flex-wrap: nowrap;
 	justify-content: space-between;
 	align-items: center;
+	background-color: var(--white);
 	z-index: 555;
-	background-color: var(--blue-extra-light);
 	padding: 0.4rem 1.2rem;
-	border-radius: 0.3125rem;
-	box-shadow: 0 0 0.625rem rgba(23, 23, 23, 0.2);
 }
 
-.carInfo_backLink {
+.carDetail_backLink {
 	display: flex;
 	align-items: center;
 	transition: color 0.3s ease-in-out;
@@ -148,18 +35,138 @@
 	}
 }
 
+/* ########## GALLERY ########## */
+.carGallery {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	margin-bottom: 2rem;
+
+	@media screen and (min-width: 1024px) {
+		flex-direction: row;
+		margin-bottom: 0;
+		align-items: center;
+	}
+}
+
+.carGallery_image {
+	position: relative;
+	width: 100%;
+	height: auto;
+	display: flex;
+	align-items: center;
+
+	@media screen and (min-width: 1024px) {
+		width: 50%;
+	}
+
+	& img {
+		width: 100%;
+		height: 14rem;
+		object-fit: contain;
+
+		@media screen and (min-width: 480px) {
+			height: 24rem;
+		}
+	}
+}
+
+.carGallery_leftButton,
+.carGallery_rightButton {
+	position: absolute;
+	background-color: rgba(var(--rgb-white), 0.5);
+	color: white;
+	border: 2px solid var(--main-color);
+	border-radius: 0.4rem;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: var(--main-color);
+	margin-top: 0;
+	padding: 0.5rem;
+	transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+
+	& svg {
+		width: 1.75rem;
+		height: 1.75rem;
+	}
+
+	&:hover {
+		background-color: var(--main-color);
+		color: var(--white);
+	}
+}
+
+.carGallery_leftButton {
+	left: 0;
+}
+
+.carGallery_rightButton {
+	right: 0;
+}
+
+.carGallery_grid {
+	display: none;
+	opacity: 0;
+
+	@media screen and (min-width: 1024px) {
+		display: flex;
+		flex-direction: column;
+		align-items: end;
+		width: 50%;
+		opacity: 1;
+
+		& button {
+			margin-top: 0;
+		}
+	}
+}
+
+.carGallery_gridImages {
+	position: relative;
+	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	gap: 0.75rem;
+	margin-bottom: 1rem;
+	opacity: 1;
+
+	& img {
+		justify-self: center;
+		align-self: center;
+		object-fit: contain;
+		width: 75%;
+	}
+}
+
+.carGallery_gridImage {
+	border-radius: 8px;
+	cursor: pointer;
+	border: 2px solid transparent;
+	transition: border 0.3s ease-in-out;
+	filter: brightness(0.8) grayscale(1);
+	opacity: 0.9;
+}
+
+.carGallery_gridImage.active {
+	border: 2px solid var(--main-color);
+	filter: brightness(1) grayscale(0);
+	opacity: 1;
+}
+/* ########## END GALLERY ########## */
+
+/* ########## INFO ########## */
 .carInfo_cards {
 	flex-direction: column;
 	display: flex;
 	flex-wrap: nowrap;
 	gap: 1rem;
 
-	@media screen and (min-width: 765px) {
+	@media screen and (min-width: 768px) {
 		flex-direction: row;
-	}
-
-	@media screen and (min-width: 1024px) {
-		flex-direction: column;
 	}
 }
 
@@ -169,51 +176,4 @@
 	border-radius: 0.3125rem;
 	color: var(--black);
 }
-
-.carDetailData {
-	position: relative;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	flex-wrap: wrap;
-	gap: 1rem;
-
-	& h3 {
-		font-size: 1.5rem;
-	}
-}
-
-.carDetailData.favoriteButton {
-	position: absolute;
-	top: 0.8rem;
-	right: 0.8rem;
-}
-
-.carDetailDataButtons {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	align-items: stretch;
-	gap: 1rem;
-}
-Container .carDetailSpecs {
-	& h4 {
-		width: 100%;
-		border-bottom: 1px solid var(--main-color);
-		padding-bottom: 0.6rem;
-		margin-bottom: 1rem;
-	}
-}
-
-.carDetailSpecsData {
-	display: flex;
-	flex-wrap: nowrap;
-	align-items: center;
-	gap: 1rem;
-	padding: 0.4rem 0;
-
-	& svg {
-		width: 1.6rem;
-	}
-}
-/* ########## End Car Info ########## */
+/* ########## END INFO ########## */
