--- a/src/components/carCards/CarCard_V1V2V3.module.css
+++ b/src/components/carCards/CarCard_V1V2V3.module.css
@@ -43,7 +43,7 @@
 .cardContent_image {
 	width: 100%;
 	height: 10rem;
-	object-fit: cover;
+	object-fit: contain;
 }
 
 .cardContent_header {
@@ -98,12 +98,6 @@
 	}
 }
 
-.cardContent_specs {
-	display: flex;
-	flex-direction: column;
-	gap: 0.6rem;
-}
-
 .cardContent_detailsTitle,
 .cardContent_specsTitle {
 	font-size: 1.1rem;
@@ -118,6 +112,30 @@
 
 .cardContent_specsList {
 	display: flex;
-	flex-wrap: wrap;
-	gap: 0.4rem;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.cardContent_specsItem {
+	display: flex;
+	flex-wrap: nowrap;
+
+	& img {
+		width: 1.75rem;
+		height: 1.75rem;
+		margin-right: 0.8rem;
+	}
+
+	& span {
+		font-weight: 600;
+		text-transform: uppercase;
+		font-size: 0.95rem;
+	}
+}
+
+.cardContent_noData {
+	font-weight: 600;
+	text-align: center;
+	color: var(--warning);
+	padding: 0.6rem 0;
 }
