--- a/src/pages/CarDetail.module.css
+++ b/src/pages/CarDetail.module.css
@@ -1,6 +1,7 @@
 .carDetail {
 	width: 100%;
 	min-height: 100vh;
+	height: 100%;
 
 	& h2 {
 		padding: 2rem 0;
@@ -13,15 +14,12 @@
 }
 
 .carDetail_header {
-	position: sticky;
-	top: var(--header-height);
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
 	justify-content: space-between;
 	align-items: center;
 	background-color: var(--white);
-	z-index: 555;
 	padding: 0.4rem 1.2rem;
 }
 
@@ -35,6 +33,19 @@
 	}
 }
 
+.carDetail_content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	gap: 1.5rem;
+
+	@media screen and (min-width: 1024px) {
+		flex-direction: row;
+	}
+}
+
 /* ########## GALLERY ########## */
 .carGallery {
 	width: 100%;
@@ -44,7 +55,7 @@
 	margin-bottom: 2rem;
 
 	@media screen and (min-width: 1024px) {
-		flex-direction: row;
+		width: 50%;
 	}
 }
 
@@ -54,10 +65,6 @@
 	height: auto;
 	display: flex;
 	align-items: center;
-
-	@media screen and (min-width: 1024px) {
-		width: 50%;
-	}
 
 	& img {
 		width: 100%;
@@ -108,12 +115,12 @@
 .carGallery_grid {
 	display: none;
 	opacity: 0;
+	width: 100%;
 
 	@media screen and (min-width: 1024px) {
 		display: flex;
 		flex-direction: column;
 		align-items: end;
-		width: 50%;
 		opacity: 1;
 
 		& button {
@@ -122,56 +129,65 @@
 	}
 }
 
-.carGallery_gridImages {
+.carGallery_gridItem {
 	position: relative;
 	width: 100%;
 	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(2, 1fr);
+	grid-template-columns: repeat(4, 1fr);
 	gap: 0.75rem;
 	margin-bottom: 1rem;
 	opacity: 1;
-
-	& img {
-		justify-self: center;
-		align-self: center;
-		object-fit: contain;
-		width: 75%;
-	}
 }
 
 .carGallery_gridImage {
+	width: 100%;
+	height: 100%;
 	border-radius: 8px;
 	cursor: pointer;
 	border: 2px solid transparent;
 	transition: border 0.3s ease-in-out;
 	filter: brightness(0.8) grayscale(1);
 	opacity: 0.9;
+	object-fit: cover;
 }
 
 .carGallery_gridImage.active {
 	border: 2px solid var(--main-color);
 	filter: brightness(1) grayscale(0);
 	opacity: 1;
+	object-fit: contain;
 }
 /* ########## END GALLERY ########## */
 
 /* ########## INFO ########## */
 .carInfo_cards {
-	flex-direction: column;
 	display: flex;
+	flex-direction: column;
 	flex-wrap: nowrap;
 	gap: 1rem;
+	width: 100%;
 
 	@media screen and (min-width: 768px) {
 		flex-direction: row;
+	}
+
+	@media screen and (min-width: 1024px) {
+		flex-direction: column;
+		width: 50%;
 	}
 }
 
 .carInfo_cardContainer {
 	width: 100%;
+	height: 100%;
 	background-color: var(--blue-extra-light);
 	border-radius: 0.3125rem;
 	color: var(--black);
 }
 /* ########## END INFO ########## */
+
+.carDetail_stickyTop {
+	position: sticky;
+	top: var(--header-height);
+	z-index: 1;
+}
